[build-system]
requires = [
    "setuptools",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "yomura_dash_components"
description = "https://github.com/yomura-yomura/yomura-dash-components"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "dash[dev] ~= 2.9.3"
]
classifiers=[
    'Framework :: Dash'
]

dynamic = ["version"]

[tool.setuptools]
packages = ["yomura_dash_components"]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.setuptools_scm]
write_to = "version.py"
